Bug 94799 - [bisected]X segfaults during sddm start up
Summary: [bisected]X segfaults during sddm start up
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/AMDgpu (show other bugs)
Version: git
Hardware: Other Linux (All)
: medium major
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-02 12:01 UTC by farmboy0+freedesktop
Modified: 2016-04-05 07:55 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg.log (33.83 KB, text/plain)
2016-04-02 12:01 UTC, farmboy0+freedesktop
no flags Details

Description farmboy0+freedesktop 2016-04-02 12:01:43 UTC
Created attachment 122680 [details]
Xorg.log

With xf86-video-amdgpu git I cannot start the sddm login manager anymore.
Reverting the driver back to 1.0.1 fixes the problem.
Bisecting shows the following commit as the guilty party:

commit df60c635e1e632233de9dd4b01d63c2b963003f8
Author: Michel Dänzer <michel.daenzer@amd.com>
Date:   Wed Feb 24 17:06:43 2016 +0900

    glamor: Avoid generating GEM flink names for BOs shared via DRI3 (v2)
    
    We can't create our own struct amdgpu_buffer representation in this case
    because destroying that would make the GEM handle inaccessible to glamor
    as well. So just get the handle directly via dma-buf.
    
    (ported from radeon commit 391900a670addec39515f924265bfa9f8bfa9ec0,
     extended to cache BO handles in the private for non-DRI3 pixmaps as
     well)
    
    v2: Swap whole pixmap privates instead of just BOs in
        amdgpu_dri2_exchange_buffers to avoid invalidating cached BO handles
    
    Reviewed-by: Alex Deucher <alexander.deucher@amd.com>
Comment 1 Michel Dänzer 2016-04-05 07:55:06 UTC
Thanks for the report. Fixed in Git:

commit aed1c17c43b2c0c983f6fc0973a5224d0faf32d9
Author: Michel Dänzer <michel.daenzer@amd.com>
Date:   Mon Apr 4 18:28:02 2016 +0900

    glamor: Force GPU rendering to/from pixmaps created via DRI3


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.