glamor: Force GPU rendering to/from pixmaps created via DRI3

Fixes crash when running DRI3 clients with ShadowPrimary enabled.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=94799

Reviewed-by: Alex Deucher <alexander.deucher@amd.com>